<resources>
    <string name="app_name">Leafter</string>
    <string name="title_home">Home</string>
    <string name="title_writer">Writer</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BookTitle">BookTitle</string>
    <string name="BookAuthor">BookAuthor</string>
    <string name="BookInfo">Book Information</string>
    <string name="BookDescDetail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dictum urna sed eleifend aliquet. Suspendisse tempus feugiat tortor eu mattis. Integer placerat arcu at velit molestie pellentesque. Quisque sed faucibus sapien, id ornare purus. Nulla pretium massa sit amet leo maximus facilisis. Etiam consectetur nulla at felis egestas tincidunt. Suspendisse varius ipsum et lectus lobortis, ac laoreet est mattis. Donec mollis orci eget rhoncus semper. Nulla justo mauris, molestie in accumsan et, suscipit at tortor. In mattis odio non nibh porta facilisis. Nulla nec dolor nec turpis pellentesque rutrum.</string>
    <string name="BookDescTitle">Description</string>
    <string name="BookThumbnail">BookThumbnail</string>
    <string name="ReadBook">ReadBook</string>
    <string name="author">Author</string>

    <!--    asdasdasdksmadlmsalkdmaslkmdlaksmdlkm -->
    <string name="book_viewed_on">Viewed %s</string>
    <string name="book_added_on">Added %s</string>

    <string name="book_status_completed">Completed %s</string>
    <string name="book_status_later">Later (%s)</string>
    <string name="book_status_later2">Books marked \'Later\'</string>
    <string name="book_status_completed2">Books marked \'Completed\'</string>
    <string name="book_status_any">All books</string>
    <string name="book_status_started">Open books</string>
    <string name="book_status_none">Unread books</string>
    <string name="mark">Show…</string>

    <string name="un_mark">Unmark</string>
    <string name="mark_later">Mark \'For later\'</string>
    <string name="mark_completed">Mark \'Completed\'</string>

    <string name="add">Add book</string>
    <string name="add_dir">Add books from folder</string>
    <string name="contents">Contents</string>
    <string name="zoom">zoom</string>
    <string name="already_added">File \"%s\" already added</string>
    <string name="select_thisfolder">Select this folder</string>
    <string name="cancel">Cancel</string>
    <string name="find_folder">Find folder</string>
    <string name="find_book">Find book</string>
    <string name="open_book">Open book</string>
    <string name="close_book">Close book</string>
    <string name="remove_book">Remove book</string>
    <string name="coulndt_add_book">Couldn\'t add \"%s\"</string>

    <string name="sort">Sort</string>
    <string name="sort_by_default">Default sort</string>
    <string name="sort_by_added_date">Sort by added</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_author">Sort by author</string>
    <string name="prev_text" translatable="false">&lt;&lt;</string>
    <string name="next_text" translatable="false">&gt;&gt;</string>
    <string name="books_added">%d books added</string>
    <string name="bright">Bright</string>
    <string name="dim">Dim</string>
    <string name="bright_medium">Medium</string>
    <string name="book_default">Book default</string>
    <string name="no_toc_found">No table of contents found</string>
    <string name="added_numbooks">Added %d</string>
    <string name="loading">Loading</string>
    <string name="find_books_online">Find books online</string>
    <string name="source_name">Source name</string>
    <string name="web_url">URL</string>
    <string name="web_add">Add</string>
    <string name="getbooks_desc">The links below will open in your web browser. Downloaded books will be placed in the web browser\'s default download location.</string>
    <string name="new_websrc">New</string>
    <string name="web_url_hint" translatable="false">http://www.</string>
    <string name="search_res_title">Search for \'%1$s\' (%2$d)</string>
    <string name="search_for">Search for:</string>
    <string name="hint_search_text">Little Women</string>
    <string name="title">Title</string>
    <string name="both">Both</string>
    <string name="search_your_books">Search your books</string>
    <string name="start_options">Start options</string>
    <string name="last_read">Last read</string>
    <string name="shortcut_latest">Continue reading</string>
    <string name="shortcut_latest_title">Read %s</string>
    <string name="book_bug">Something went wrong. Please report this book as a bug.</string>
    <string name="auto_bright">Auto</string>

    <string name="enable_screen_paging">Enable screen paging</string>
    <string name="enable_scroll">Enable drag scroll</string>
    <string name="options">Options</string>
    <string name="bookstatus">BookStatus</string>
    <string name="ctlgname">CtlgName</string>
    <string name="ctlgurl">CtlgURL</string>
    <string name="title_activity_splash_screen">Splash</string>
    <string name="SplashScreen">SplashScreen</string>


    <!-- if your language/country has its own sites change or add them here -->
    <string-array name="getbook_names">
        <item>Project Gutenberg</item>
        <item>Archive.org</item>
        <item>free-ebooks.net</item>
        <item>Librivox</item>
        <item>getfreeebooks.com</item>
        <item>freetechbooks.com</item>
    </string-array>
    <string-array name="getbook_urls">
        <item>http://m.gutenberg.org/</item>
        <item>https://archive.org/details/texts</item>
        <item>https://www.free-ebooks.net/</item>
        <item>https://librivox.org/</item>
        <item>https://www.getfreeebooks.com/</item>
        <item>https://www.freetechbooks.com/</item>
    </string-array>
</resources>